<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardViewHistorico"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:padding="20dp"
    app:cardBackgroundColor="#00BCD4"
    app:cardCornerRadius="4dp"
    app:cardElevation="8dp"
    tools:layout_editor_absoluteX="159dp"
    tools:layout_editor_absoluteY="436dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/itemHistoricoLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/containerFecha"
            android:layout_width="96dp"
            android:layout_height="147dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/containerCentral"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtVmostrarMes"
                android:layout_width="99dp"
                android:layout_height="34dp"
                android:gravity="center"
                android:text="@string/diciembre"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtVmostrarDia"
                android:layout_width="99dp"
                android:layout_height="75dp"
                android:gravity="center"
                android:text="@string/_7"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtVmostrarAnyo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/_2020"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerCentral"
            android:layout_width="200dp"
            android:layout_height="147dp"
            android:layout_marginEnd="2dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/containerIMC"
            app:layout_constraintStart_toEndOf="@+id/containerFecha"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtVresultadoIMC"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:paddingTop="5dp"
                android:text="@string/tipo_imc"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtVsexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Mujer" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/labelPeso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/peso" />

                <TextView
                    android:id="@+id/tvPeso"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_00_0"
                    android:textAlignment="viewStart" />

                <TextView
                    android:id="@+id/labelAltura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/altura" />

                <TextView
                    android:id="@+id/tvAltura"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_000_0"
                    android:textAlignment="viewStart" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerIMC"
            android:layout_width="101dp"
            android:layout_height="147dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/containerCentral"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtEtiquetaIMC"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:gravity="center"
                android:text="@string/imc"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtViMC"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:gravity="center"
                android:text="@string/_0_0"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>